--- a/src/shared/styles/globals.css
+++ b/src/shared/styles/globals.css
@@ -3,36 +3,36 @@
 @tailwind utilities;
 
 @layer components {
-    .btnPrimary {
-        @apply text-white bg-primaryLight capitalize px-11 py-2.5 rounded-xl font-semibold;
-    }
-    .btnSecondary {
-        @apply h-10 font-semibold capitalize bg-white rounded-full shadow-lg w-52;
-    }
-    .btnAccent {
-        @apply w-32 h-10 text-white capitalize shadow-lg bg-accent;
-    }
-    .section-container {
-        @apply min-h-screen max-w-[1172px] mx-auto container;
-    }
-    .navlink {
-        @apply relative px-1 pb-3 font-medium uppercase text-textSecondary hover:text-primaryDark;
-    }
-    .form-modal {
-        @apply bg-white shadow-2xl h-[530px] w-[345px] rounded-3xl p-4;
-    }
-    .form-input {
-        @apply py-1.5 px-0 mb-4 w-full border-gray-400 focus:border-primaryLight placeholder:text-sm focus:placeholder:text-gray-800 focus:text-gray-800 text-gray-500 outline-none focus:ring-transparent border-0 border-b-[1px];
-    }
-    .grayDiv {
-        @apply bg-[#f1f1f1] px-8 rounded-2xl;
-    }
-    .titleTab {
-        @apply px-5 py-0.5 rounded-full w-fit;
-    }
-    .tabBorder {
-        @apply border-2 border-textSecondary/70;
-    }
+  .btnPrimary {
+    @apply text-white bg-primaryLight capitalize px-11 py-2.5 rounded-xl font-semibold;
+  }
+  .btnSecondary {
+    @apply h-10 font-semibold capitalize bg-white rounded-full shadow-lg w-52;
+  }
+  .btnAccent {
+    @apply w-32 h-10 text-white capitalize shadow-lg bg-accent;
+  }
+  .section-container {
+    @apply min-h-screen max-w-[1172px] mx-auto container;
+  }
+  .navlink {
+    @apply relative px-1 pb-3 font-medium uppercase text-textSecondary hover:text-primaryDark;
+  }
+  .form-modal {
+    @apply bg-white shadow-2xl h-[530px] w-[345px] rounded-3xl p-4;
+  }
+  .form-input {
+    @apply py-1.5 px-0 mb-4 w-full border-gray-400 focus:border-primaryLight placeholder:text-sm focus:placeholder:text-gray-800 focus:text-gray-800 text-gray-500 outline-none focus:ring-transparent border-0 border-b-[1px];
+  }
+  .grayDiv {
+    @apply bg-[#f1f1f1] px-8 rounded-2xl;
+  }
+  .titleTab {
+    @apply px-5 py-0.5 rounded-full w-fit;
+  }
+  .tabBorder {
+    @apply border-2 border-textSecondary/70;
+  }
 }
 /**=====================================================**/
 /** import font **/
@@ -44,34 +44,34 @@
   @apply antialiased font-body;
 } */
 body {
-    font-family: "Poppins", sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 /**=====================================================**/
 /** Styles for scrollbar of scrollbar **/
 /**=====================================================**/
 .Scrollbar::-webkit-scrollbar {
-    width: 5px;
-    padding-left: 100px;
+  width: 5px;
+  padding-left: 100px;
 }
 .Scrollbar::-webkit-scrollbar-thumb {
-    border-radius: 10px;
-    -webkit-border-radius: 10px;
-    -moz-border-radius: 10px;
-    -ms-border-radius: 10px;
-    -o-border-radius: 10px;
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
 }
 /**=====================================================**/
 /** Styles for Navlink of Navbar **/
 /**=====================================================**/
 
 .navlink:hover::before {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 5px;
-    left: 0;
-    bottom: 0;
-    background: #01b489;
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 5px;
+  left: 0;
+  bottom: 0;
+  background: #01b489;
 }
 
 /**=====================================================**/
@@ -79,13 +79,13 @@ body {
 /**=====================================================**/
 
 .openingLogo {
-    height: 45%;
-    width: 25%;
+  height: 45%;
+  width: 25%;
 }
 
 .openingWave {
-    width: 100%;
-    height: 72%;
+  width: 100%;
+  height: 72%;
 }
 
 /**=====================================================**/
@@ -93,8 +93,8 @@ body {
 /**=====================================================**/
 
 .categoryWave {
-    width: 100%;
-    height: 92%;
+  width: 100%;
+  height: 92%;
 }
 
 /**=====================================================**/
@@ -102,8 +102,8 @@ body {
 /**=====================================================**/
 
 .phase2-wave {
-    width: 100%;
-    height: 107%;
+  width: 100%;
+  height: 107%;
 }
 
 /**=====================================================**/
@@ -111,64 +111,127 @@ body {
 /**=====================================================**/
 
 .dashboard-menu-item-active {
-    position: relative;
-    z-index: 1;
+  position: relative;
+  z-index: 1;
 }
 .dashboard-menu-item-active::after {
-    position: absolute;
-    content: "";
-    width: 20px;
-    height: 20px;
-    background: white;
-    transform: rotate(180deg);
-    top: -20px;
-    right: 0;
-    z-index: -1;
+  position: absolute;
+  content: "";
+  width: 20px;
+  height: 20px;
+  background: white;
+  transform: rotate(180deg);
+  top: -20px;
+  right: 0;
+  z-index: -1;
 }
 .dashboard-menu-item-active::before {
-    position: absolute;
-    content: "";
-    width: 20px;
-    height: 20px;
-    background: white;
-    transform: rotate(180deg);
-    bottom: -20px;
-    right: 0;
-    z-index: -1;
+  position: absolute;
+  content: "";
+  width: 20px;
+  height: 20px;
+  background: white;
+  transform: rotate(180deg);
+  bottom: -20px;
+  right: 0;
+  z-index: -1;
 }
 
 select {
-    appearance: none;
-    border: none;
+  appearance: none;
+  border: none;
 }
 
 table {
-    border-collapse: separate;
+  border-collapse: separate;
 }
 
 thead {
-    border-radius: 20px;
-    margin-bottom: 8px;
+  border-radius: 20px;
+  margin-bottom: 8px;
 }
 
 tbody {
-    padding-top: 30px;
+  padding-top: 30px;
 }
 
 th {
-    border-right: 2px solid #b9b9b9;
+  border-right: 2px solid #b9b9b9;
 }
 
 td {
-    border-bottom: 4px solid white;
-    padding-bottom: 10px;
-    padding-top: 20px;
+  border-bottom: 4px solid white;
+  padding-bottom: 10px;
+  padding-top: 20px;
 }
 .custom-td {
-    border-right: 2px solid #01b489;
-    border-bottom: none;
-    padding-bottom: 5px;
-    padding-top: 5px;
-    padding-left: 4px;
-    padding-right: 4px;
+  border-right: 2px solid #01b489;
+  border-bottom: none;
+  padding-bottom: 5px;
+  padding-top: 5px;
+  padding-left: 4px;
+  padding-right: 4px;
+}
+
+.apperance {
+  -moz-appearance: none; /* Firefox */
+  -webkit-appearance: none; /* Safari and Chrome */
+  appearance: none;
+  background-image: url("../../assets/img/dashicons_arrow-down.svg");
+  background-repeat: no-repeat;
+  background-position: right 0.75rem center;
+  background-size: 1.5em 1.5em;
+}
+
+.rangeSlider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  background-color: #1be59d;
+  border: none !important;
+}
+
+.rangeSlider::-moz-range-thumb {
+  width: 16px;
+  height: 16px;
+  background-color: #1be59d;
+  border: none !important;
+}
+
+.rangeSlider:active::-webkit-slider-thumb {
+  background-color: #1be59d;
+}
+
+.rangeSlider:active::-moz-range-thumb {
+  background-color: #1be59d;
+}
+
+.form-checkbox {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  -webkit-print-color-adjust: exact;
+  color-adjust: exact;
+  display: inline-block;
+  vertical-align: middle;
+  background-origin: border-box;
+  user-select: none;
+  flex-shrink: 0;
+  height: 1.2em;
+  width: 1.2em;
+  color: #2d3748;
+  background-color: #fff;
+  border-color: #1be59d;
+  border-width: 1px;
+  border-radius: 0.25rem;
+  transition: background-color 150ms, border-color 150ms, color 150ms,
+    box-shadow 150ms;
+  border-radius: 9999px;
+}
+.form-checkbox:checked {
+  color: #fff;
+  background-color: #1be59d;
+  border-color: #1be59d;
 }
